---------------------------------------------------------------------------------------------------
Version: 0.7.0
Date: 2022-08-09
  Features:
    - New optional intermediate: CuW composite. Replaces tungsten plate in some recipes.
    - A few basic recipe tweaks for 248k
  Changes:
    - General balance: Tungsten plates required for piercing ammunition reduced.
    - General balance: Tungsten ingredients required for oil refinery & chemical plant increased.
    - General balance: For some mod loadouts, steel no longer required for assembling machine 2
    - SE+K2 balance: When using Space Exploration 0.6 & Krastorio 2, speed modules are now removed
      from rocket science (rocket tech cards), but many more rocket engine nozzles are used.
      This slightly balances the jump in complexity from chemical to rocket science.
      Speed modules are still used later in optimization science.
---------------------------------------------------------------------------------------------------
Version: 0.6.6
Date: 2021-08-02
  Changes:
    - Asteroid Mining support
---------------------------------------------------------------------------------------------------
Version: 0.6.5
Date: 2021-07-10
  Changes:
    - Support Double Furnace mod
  Localization:
    - ru locale updates thanks to Pergamum663
---------------------------------------------------------------------------------------------------
Version: 0.6.4
Date: 2021-07-03
  Fixes:
    - Prod modules for molten
---------------------------------------------------------------------------------------------------
Version: 0.6.3
Date: 2021-07-02
  Fixes:
    - SE K2 subgroup cleanup
---------------------------------------------------------------------------------------------------
Version: 0.6.2
Date: 2021-07-02
  Changes:
    - SE Update smelting unlock
---------------------------------------------------------------------------------------------------
Version: 0.6.1
Date: 2022-07-01
  Changes: